crates/mun_codegen/src/snapshots/test__bit_op_i8.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn not(a: i8) -> i8 { !a }\npub fn bitand(a: i8, b: i8) -> i8 { a & b }\npub fn bitor(a: i8, b: i8) -> i8 { a | b }\npub fn bitxor(a: i8, b: i8) -> i8 { a ^ b }"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo.1 = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@global_type_table = external global [1 x %struct.MunTypeInfo.1 addrspace(4)*]

define i8 @not(i8 %0) {
body:
  %not = xor i8 %0, -1
  ret i8 %not
}

define i8 @bitand(i8 %0, i8 %1) {
body:
  %bit_and = and i8 %0, %1
  ret i8 %bit_and
}

define i8 @bitor(i8 %0, i8 %1) {
body:
  %bit_or = or i8 %0, %1
  ret i8 %bit_or
}

define i8 @bitxor(i8 %0, i8 %1) {
body:
  %bit_xor = xor i8 %0, %1
  ret i8 %bit_xor
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@"type_info::<core::i8>::name" = private unnamed_addr constant [9 x i8] c"core::i8\00"
@"type_info::<core::i8>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"\EF\C4\B1Z\E7\12\B1\91q\F1\0B\80U\FC\A6\0F", [9 x i8]* @"type_info::<core::i8>::name", i32 8, i8 1, i8 0 }
@global_type_table = global [1 x %struct.MunTypeInfo addrspace(4)*] [%struct.MunTypeInfo addrspace(4)* @"type_info::<core::i8>"]

